[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vements"
version = "0.0.1"
authors = [
  { name="Support Contact", email="contact@vements.io" },
]
description = "Vements is achievements and scoreboards for everyone."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vements/clients"
"Bug Tracker" = "https://github.com/vements/clients/issues"
