[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vements"
version = "0.0.5"
authors = [
  { name="Vements Support", email="support@vements.io" },
]
description = "Achievements and Scoreboards for Everyone"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vements/client-py"
"Bug Tracker" = "https://github.com/vements/client-py/issues"
